--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <p>Na saga Harry Potter, a pedra filosofal teria a capacidade de transmutar qualquer metal básico em ouro ou prata, curar qualquer doença e estender a vida de qualquer um que consumisse uma pequena lasca. A pedra também teria a capacidade de criar uma lâmpada que nunca se apaga, reviver plantas e transformar cristais comuns em pedras preciosas.</p>
         <p>O famoso alquimista Nicolau Flamel criou a única pedra filosofal conhecida. Ele usou o elixir da vida feito a partir da pedra para estender sua vida e a de sua esposa por mais de seis séculos.
         Ela foi originalmente armazenada no Banco Gringotes, cofre 713. No entanto, suspeitando de uma ameaça, Alvo Dumbledore pediu a Rúbeo Hagrid que a recuperasse.
-        A pedra filosofal foi, então, colocada em uma câmara especial e guardada por encantos e criaturas, fornecidos pelos professores em Hogwarts.</p>
-        <p>A fim de manter os alunos longe de tudo isso, Dumbledore proibiu o acesso ao corredor do terceiro andar a todos os alunos. Entretanto, Hermione, Harry e Ronald decidem enfrentar esses desafios para conseguirem salvar a pedra de um possível roubo prestes a ser cometido pelo temível Lord Voldemort.</p>
-        <p>Escolha com que personagem você deseja realizar essa aventura!</p>
+        A pedra filosofal foi, então, colocada em uma câmara especial e guardada por encantos e criaturas, fornecidos pelos professores de Hogwarts.</p>
+        <p>A fim de manter os alunos longe de tudo isso, Dumbledore proibiu o acesso ao corredor do terceiro andar a todos os alunos. Entretanto, Hermione, Harry e Ronald decidem enfrentar esses desafios para conseguirem salvar a importante pedra de um possível roubo prestes a ser cometido pelo temível Lord Voldemort.</p>
+        <p>Escolha abaixo com qual personagem você deseja realizar essa aventura!</p>
     </div>
     
     <div class="container">
